# tamarin-firmware

./: CMakeLists.txt  README.md  build.sh  crc.c  crc.h  lightning_rx.pio  lightning_tx.pio  main.c  probe.pio  tamarin_config.h  tamarin_probe.c  tamarin_probe.h  tusb_config.h  usb_descriptors.c  util.c  util.h
